styles/main/style.css
:root {
  --gray-dark: #333333;
  --gray-light: #D6D6D6;
  --contacts-dark-gray: #363434;
  --contacts-light-gray: #3A3A3A;
  --font-primary: "Rubik", sans-serif;
  --font-secondary: "Ubuntu", sans-serif;

  /* Skills Swiper*/
  --skills-mobile-slide-count: 3;
  --skills-mobile-slide-height: 410px;
  --skills-mobile-slide-gap: 32px;

  /* Portfolio Swiper*/
  --portfolio-slide-gap: 32px;
  --portfolio-slide-count: 6;

  --portfolio-tablet-slide-height: 520px;
  --portfolio-mobile-slide-height: 200px;
}

/* GLOBAL */
* {
  box-sizing: border-box;
}
html {
  font-family: var(--font-primary);
  color: var(--gray-dark);
}

/* HEADER */
.container {
  max-width: 1520px;
  width: 100%;
  padding: 0px 20px;
  margin: 0 auto;
}
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 32px;
}
.header__search {
  cursor: pointer;
}
.header__menu {
  cursor: pointer;
  display: flex;
  gap: 16px;
}
.menu__text {
  font-family: var(--font-secondary);
  font-weight: 300;
  font-size: 24px;
}

/* HERO SECTION */
.hero {
  margin-top: 160px;
  padding-top: 0px;
}
.hero__content {
  display: flex;
  gap: 60px;
}
.hero__label {
  font-family: var(--font-secondary);
  font-size: 34px;
  font-weight: 700;
  display: flex;
  align-items: flex-end;
}
.hero__label::before {
  content: "";
  height: 0.5em;
  width: 48px;
  border-top: 2px solid var(--gray-dark);
  margin-right: 12px;
}
.hero__title {
  margin-top: 20px;
  font-size: 74px;
  font-weight: 400;
}
.hero__title--name {
  font-weight: bold;
}
.hero__subtitle {
  margin-top: 20px;
  font-size: 40px;
  font-weight: 400;
}
.hero__desc {
  margin-top: 20px;
  font-size: 24px;
}

.hero__scroll {
  margin-top: 56px;
  display: flex;
  align-items: center;
}
.social__items {
  display: flex;
  gap: 32px;
}
.scroll {
  display: flex;
  margin: auto;
  flex-direction: column;
  cursor: pointer;
}
.scroll__text {
  font-size: 18px;
  font-weight: 300;
}
.scroll__icon {
  margin-top: 12px;
  height: 32px;
}
.space {
  width: 100px;
  height: 65px;
}

/* ABOUTME SECTION */
.crate {
  max-width: 1262px;
  width: 100%;
  margin: 0 auto;
  padding: 0px 20px;
}
.aboutme {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-top: 180px;
}
.aboutme__title {
  font-weight: 400;
  font-size: 36px;
}
.aboutme__video {
  margin-top: 60px;
  width: 100%;
  overflow: hidden;
  cursor: pointer;
}
.video__poster {
  width:100%;
  height:100%;
}

/* SKILLS SECTION */
.skills {
  margin-top: 280px;
}
.skills__title {
  font-size: 54px;
  text-align: center;
  font-weight: 500;
}
.skills__swiper {
  margin-top: 60px;
}
.skill__box {
  padding: 78px 40px;
}
.skill__box__title {
  font-weight: 400;
  font-size: 46px;
}
.skill__box__desc {
  margin-top: 20px;
  font-size: 18px;
}
.skill__box__button {
  margin-top: 60px;
  display: flex;
  justify-content: space-between;
  cursor: pointer;
}
.skill__box__read {
  font-weight: 600;
  font-size: 18px;
}
.box__dark {
  color: white;
  background-color: var(--gray-dark);
}
.box__light {
  background-color: var(--gray-light);
}
.skill__boxes__pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 32px !important;
}
.skills__footer {
  margin-top: 60px;
  display: flex;
  justify-content: space-between;
}
.filler {
  width: 65px;
}
.arrows {
  display: flex;
  justify-content: flex-end;
  gap: 12px;
}

/* Swiper */
.swiper-button-next,
.swiper-button-prev {
  background-image: none;
  position: static;
  top: 0%;
}
.swiper-button-next:after,
.swiper-button-prev:after {
  content: "" !important;
}
.swiper-pagination-bullet {
  width: 12px;
  height: 12px;
  opacity: 1;
  background-color: #333333;
}
.swiper-pagination-bullet-active {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  border: solid 7px;
  background-color: #FFFFFF;
}
.swiper-pagination-bullets {
  margin: 0 0;
}
.swiper-pagination-vertical.swiper-pagination-bullets,
.swiper-vertical>.swiper-pagination-bullets {
  transform: translate3d(0, 0, 0);
}

/* Portfolio section */
.portfolio {
  margin-top: 284px;
  text-align: center;
}
.portfolio__title {
  font-size: 54px;
}
.portfolio__btns {
  margin-top: 60px;
  display: flex;
  justify-content: center;
}
.portfolio__btn {
  cursor: pointer;
  background-color: transparent;
  font-size: 18px;
}
.btn__active {
  font-weight: 600;
}
.portfolio__btn::after {
  padding: 0px 24px;
  font-weight: 400;
  content: "-";
  cursor: auto;
}
.portfolio__btn:last-child:after {
  content: "";
}
.portfolio__boxes__pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 32px !important;
}
.portfolio__swiper{
  margin-top: 60px;
}
.portfolio__stack {
  display: flex;
  flex-direction: column;
  gap: 32px;
  align-items: center;
}
.portfolio__box {
  display: none;
}
.portfolio__show {
  display: block !important;
}
.portfolio__img {
  height: 100% !important;
  width: 100% !important;
}
.portfolio__footer {
  margin-top: 60px;
  display: flex;
  justify-content: space-between;
}

/* Testimonial section */
.testimonial {
  margin-top: 280px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.testimonial__title {
  font-size: 54px;
  font-weight: 500;
}
.testimonial__swiper {
  margin-top: 100px;
  width: 100%;
}
.testimonial__content {
  display: flex;
  gap: 100px;
}
.testimonial__comment {
  font-size: 40px;
}
.testimonial__body {
  display: flex;
  flex-direction: column;
  gap: 95px;
}
.testimonial__author__name {
  font-size: 28px;
  font-weight: 500;
}
.testimonial__author__desc {
  font-size: 20px;
  margin-top: 12px;
}
.testimonial__buttons {
  display: flex;
}
.testimonial__boxes__pagination {
  display: flex;
  align-items: center;
  gap: 24px;
}
.testimonial__quatation.right {
  float: right;
}

/* Contacts section */
.contacts {
  background-color: var(--contacts-dark-gray);
  margin-top: 140px;
  text-align: center;
  padding: 100px 0px;
  position: relative;
  z-index: 0;
}
.contacts__box{
  position: relative;
}
.contacts__box:before{
  content: "Hello";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--contacts-light-gray);
  font-size: 550px;
  letter-spacing: 0.13em;
  text-align: center;
  z-index: -1;
  overflow: hidden;
  line-height: 550px;
}
.contacts__label {
  font-size: 32px;
  color: white;
}
.contacts__title {
  color: white;
  font-size: 54px;
  font-weight: 400;
  margin-top: 24px;
}
.contacts__button {
  margin-top: 80px;
  font-size: 28px;
  color: var(--contacts-dark-gray);
  padding: 20px 40px;
  cursor: pointer;
}
.contacts__links {
  margin-top: 80px;
  display: flex;
  gap: 140px;
  justify-content: center;
}

/* Fix breakpoints */
@media (max-width: 1160px) {
  .testimonial__comment {
    font-size: 32px;
  }
}
@media (max-width: 1650px) {
  .contacts__box:before {
    font-size: 320px;
  }
}
@media (max-width: 800px) {
  .contacts__box:before {
    font-size: 200px;
  }
}

/* Tablet breakpoint */
@media (max-width: 1024px) {
  /* Hero Section */
  .hero {
    margin-top: 100px;
  }
  .hero__content {
    display: block;
  }
  .hero__image {
    margin-top: 56px;
  }
  .avatar {
    width: 100%;
  }
  .hero__scroll{
    justify-content: center;
    margin-top: 100px;
  }
  .scroll {
    display: none;
  }
  .space {
    display: none;
  }

  /* About-me section */
  .aboutme {
    margin-top: 200px;
  }

  /* Skills section */
  .skills {
    margin-top: 200px;
  }
  .skills__swiper {
    height: calc(var(--skills-mobile-slide-height) * var(--skills-mobile-slide-count) + var(--skills-mobile-slide-gap) * (var(--skills-mobile-slide-count) - 1));
  }
  .skill__box {
    overflow-wrap: break-word;
    height: var(--skills-mobile-slide-height) !important;
    padding: 116px 40px;
  }
  .skill__box__button {
    justify-content: flex-start;
    gap: 24px;
  }

  /* Portfolio section */
  .portfolio {
    margin-top: 200px;
  }
  .portfolio__img {
    height: var(--portfolio-tablet-slide-height) !important;
    min-width: 728px !important;
    display: flex;
  }
  .portfolio__box {
    height: calc((var(--portfolio-tablet-slide-height) * 2) + var(--portfolio-slide-gap)) !important;
  }
  .portfolio__boxes{
    height: calc(var(--portfolio-tablet-slide-height) * var(--portfolio-slide-count) + var(--portfolio-slide-gap) * (var(--portfolio-slide-count) - 1)) !important;
  }

  /* Testimobial section */
  .testimonial {
    margin-top: 200px;
  }
  .testimonial__content {
    flex-direction: column;
    align-items: center;
    gap: 50px;
  }
  .testimonial__arrows {
    display: none;
  }
  .testimonial__boxes__pagination {
    justify-content: center;
  }

  /* Contacts section */
  .contacts {
    margin-top: 100px;
  }
  .contacts__box:before{
    font-size: 260px;
  }
  .contacts__links {
    gap: 100px;
  }
}

/* Mobile breakpoint */
@media (max-width: 760px) {
  /* HEADER */
  .header {
    padding: 0px 16px;
  }
  .header__logo {
    width: 96px;
    height: 38.07px;
  }
  .menu__text {
    display: none;
  }
  .header__search {
    display: none;
  }

   /* HERO SECTION */
  .hero {
    margin-top: 70px;
  }
  .hero__label {
    font-size: 24px;
  }
  .hero__title {
    font-size: 32px;
  }
  .hero__subtitle {
    font-size: 18px;
  }
  .hero__desc {
    font-size: 18px;
  }
  .hero__scroll {
    margin-top: 60px;
  }

   /* ABOUTME SECTION */
  .aboutme {
    margin-top: 180px;
  }
  .aboutme__title {
    font-size: 32px;
  }

  /* SKILLS SECTION */
  .skills {
    margin-top: 160px;
  }
  .skills__title {
    font-size: 40px;
  }
  .skill__box {
    padding: 62px 20px;
  }
  .skills__footer {
    justify-content: center;
  }
  .filler {
    display: none;
  }
  .arrows {
    display: none;
  }

  /* Portfolio section */
  .portfolio {
    margin-top: 160px;
  }
  .portfolio__title {
    font-size: 40px;
  }
  .portfolio__btns {
    flex-direction: column;
    align-items: flex-start;
    gap: 24px;
  }
  .portfolio__btn {
    font-size: 14px;
  }
  .portfolio__btn::after {
    padding: 0px 0px;
    content: "";
  }
  .portfolio__btn::before {
    padding-right: 22px;
    font-weight: 400;
    content: "-";
    cursor: auto;
  }
  .portfolio__footer {
    justify-content: center;
  }
  .portfolio__img {
    height: var(--portfolio-mobile-slide-height) !important;
  }
  .portfolio__box {
    height: calc((var(--portfolio-mobile-slide-height) * 2) + var(--portfolio-slide-gap)) !important;
  }
  .portfolio__boxes{
    height: calc(var(--portfolio-mobile-slide-height) * var(--portfolio-slide-count) + var(--portfolio-slide-gap) * (var(--portfolio-slide-count) - 1)) !important;
  }

  /* Testimonial section */
  .testimonial {
    margin-top: 160px;
  }
  .testimonial__title {
    font-size: 40px;
  }
  .testimonial__comment {
    font-size: 18px;
  }
  .testimonial__img {
    width: 100%;
    height: 100%;
  }

  /* Contacts section */
  .contacts {
    padding: 80px 0px;
  }
  .contacts__box:before{
    display: none;
  }
  .contacts__title {
    font-size: 40px;
  }
  .contacts__links {
    gap: 40px;
  }
  .contacts__icon {
    width: 24px;
    height: 24px;
  }
}

